Closed
Bug 398243
Opened 18 years ago
Closed 18 years ago
[FIX]Form controls can be reset on reload
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: smontagu, Assigned: bzbarsky)
References
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
|
549 bytes,
text/html
|
Details | |
|
1.29 KB,
patch
|
jst
:
review+
jst
:
superreview+
jst
:
approval1.9+
|
Details | Diff | Splinter Review |
|
3.94 KB,
patch
|
Details | Diff | Splinter Review |
I'm not 100% if I understand the exact circumstances where this happens, but something like this: if a page contains form controls not inside a <form>, then on reload only the first control on the page retains its state, and all the others are reset.
Because it doesn't happen in a <form>, this might not seem like a blocker at first sight, but it's a regression, and it might also be a symptom of something more serious.
Flags: blocking1.9?
| Reporter | ||
Comment 1•18 years ago
|
||
Regression range is from 2006-06-07-05 to 2006-06-08-05. Bug 336062?
| Assignee | ||
Comment 2•18 years ago
|
||
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Attachment #283245 -
Flags: superreview?(jst)
Attachment #283245 -
Flags: review?(jst)
| Assignee | ||
Comment 3•18 years ago
|
||
Simon, do you have regression tests for this (as part of your work on that other bug)?
Blocks: 336062
Summary: Form controls can be reset on reload → [FIX]Form controls can be reset on reload
Updated•18 years ago
|
Attachment #283245 -
Flags: superreview?(jst)
Attachment #283245 -
Flags: superreview+
Attachment #283245 -
Flags: review?(jst)
Attachment #283245 -
Flags: review+
Attachment #283245 -
Flags: approval1.9+
| Assignee | ||
Comment 4•18 years ago
|
||
Fix checked in. Still need tests....
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: blocking1.9? → in-testsuite?
Resolution: --- → FIXED
| Reporter | ||
Comment 5•18 years ago
|
||
Yeah, I can easily adapt tests that I've already written to cover this. Would content/base/test/ be the right place to put them?
| Assignee | ||
Comment 6•18 years ago
|
||
That would be the right place, yes.
| Reporter | ||
Comment 7•18 years ago
|
||
| Assignee | ||
Comment 8•18 years ago
|
||
Hmm. Can't we do it with an iframe and location.reload() in pure mochitest, so it doesn't depend on the Firefox UI to work?
| Reporter | ||
Comment 9•18 years ago
|
||
Attachment #283603 -
Attachment is obsolete: true
| Assignee | ||
Comment 10•18 years ago
|
||
That looks lovely! I tweaked it to not have a race between the timeout and the reload, and checked it in. Simon, thank you for creating the test!
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•