Make sure to restore state on form-less controls correctly.  Bug 398243, r+sr+a=jst